--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -28,8 +28,8 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_gravity="center"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
             android:layout_marginBottom="5dp"
             android:layout_weight="1"
             android:background="@drawable/message_send"
@@ -39,9 +39,13 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginBottom="5dp"
-            android:padding="5dp"
+            android:padding="10dp"
             android:layout_weight="0"
             android:layout_marginLeft="5dp"
+            android:textAllCaps="false"
+            android:textSize="20sp"
+            android:gravity="center"
+            android:layout_gravity="center"
             android:onClick="sendMessage"
             android:text="send"
             android:background="@drawable/send_button" />
