--- a/app/src/main/res/layout/recycler_receive_chat.xml
+++ b/app/src/main/res/layout/recycler_receive_chat.xml
@@ -1,23 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
     android:layout_marginLeft="5dp">
 
-            <!--<com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"-->
-                <!--android:id="@+id/userProfile"-->
-                <!--android:layout_width="40dp"-->
-                <!--android:layout_height="40dp"-->
-                <!--android:src="@drawable/person"-->
-                <!--app:riv_corner_radius="20dip"-->
-                <!--app:riv_mutate_background="true" />-->
-            <TextView android:id="@+id/userProfile"
-                android:textStyle="bold"
-                android:text="Hello"
-                android:textSize="15sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+            <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/userProfile"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/person"
+                app:riv_corner_radius="20dip"
+                app:riv_mutate_background="true" />
 
             <TextView android:id="@+id/messageId"
                 android:layout_width="wrap_content"
@@ -27,9 +21,10 @@
                 android:paddingRight="10dp"
                 android:paddingTop="5dp"
                 android:paddingBottom="5dp"
+                android:layout_marginTop="2dp"
                 android:background="@drawable/receive_message"
                 android:layout_marginRight="50dp"
-                android:text="Hello, world! This is Vinayak. This is a very long text just to text what happens to long texts."
+
                 android:textSize="18sp" />
 
 </LinearLayout>
