--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context="lightning.structby.whosup.ProfileActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -19,7 +21,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginTop="140dp"
+            android:layout_marginTop="100dp"
             android:src="@drawable/ic_keyboard_arrow_left" />
 
         <ImageView
@@ -28,113 +30,68 @@
             android:layout_height="30dp"
             android:layout_alignParentRight="true"
             android:layout_marginRight="16dp"
-            android:layout_marginTop="140dp"
+            android:layout_marginTop="100dp"
             android:src="@drawable/ic_more_horiz" />
 
-        <ImageButton
-            android:id="@+id/user_profile_photo"
-            android:layout_width="140dp"
-            android:layout_height="180dp"
-            android:layout_below="@+id/header_cover_image"
+        <com.makeramen.roundedimageview.RoundedImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:id="@+id/profileImage"
+            android:src="@drawable/person"
+            app:riv_corner_radius_bottom_left="10dip"
+            app:riv_corner_radius_bottom_right="10dip"
+            app:riv_mutate_background="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="-140dp"
-            android:background="@drawable/profile_circular_border_imageview"
-            android:elevation="5dp"
-            android:padding="20dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/person"/>
+            android:adjustViewBounds="false"
+            android:cropToPadding="false"
+            android:scaleType="centerCrop" />
 
         <RelativeLayout
             android:id="@+id/profile_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/header_cover_image"
+            android:layout_below="@+id/profileImage"
             android:background="#f9f9f9"
-            android:elevation="4dp"
             android:paddingBottom="24dp">
 
-            <TextView
+            <EditText
                 android:id="@+id/user_profile_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="76dp"
+                android:layout_marginTop="20dp"
                 android:text="Name"
                 android:textSize="24sp"
-                android:textStyle="normal" />
+                android:textStyle="normal"
+                android:background="@android:color/transparent"/>
 
-            <TextView
+            <EditText
                 android:id="@+id/user_profile_short_bio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/user_profile_name"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="12dp"
-                android:text="Profession"
-                android:textSize="14sp" />
+                android:layout_marginTop="10dp"
+                android:text="Short Bio"
+                android:textColor="@color/bodyTextColor"
+                android:textSize="14sp"
+                android:background="@android:color/transparent"/>
         </RelativeLayout>
 
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+        <EditText
+            android:id="@+id/user_profile_about"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_below="@+id/profile_layout"
-            android:layout_marginTop="5dp"
-            android:orientation="vertical">
+            android:background="@android:color/transparent"
+            android:inputType="textMultiLine"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:text="@string/loremText"
+            android:textColor="@color/bodyTextColor"
+            android:textSize="14sp" />
 
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:background="#fff"
-                android:clickable="true"
-                android:elevation="4dp"
-                android:padding="20dp"
-                android:text="Android Profile UI Design" />
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:layout_marginBottom="3dp"
-                android:layout_marginTop="3dp"
-                android:background="#fff"
-                android:clickable="true"
-                android:elevation="4dp"
-                android:padding="20dp"
-                android:text="Android Profile XMl UI Design" />
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:background="#fff"
-                android:clickable="true"
-                android:elevation="4dp"
-                android:padding="20dp"
-                android:text="Android Profile UI Design" />
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:layout_marginBottom="3dp"
-                android:layout_marginTop="3dp"
-                android:background="#fff"
-                android:clickable="true"
-                android:elevation="4dp"
-                android:padding="20dp"
-                android:text="Android Profile XMl UI Design" />
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:background="#fff"
-                android:clickable="true"
-                android:elevation="4dp"
-                android:padding="20dp"
-                android:text="Android Profile UI Design" />
-        </LinearLayout>
     </RelativeLayout>
 </ScrollView>
