--- a/app/src/main/res/layout/recycler_receive_chat.xml
+++ b/app/src/main/res/layout/recycler_receive_chat.xml
@@ -6,19 +6,19 @@
     android:layout_marginBottom="2dp"
     android:layout_marginLeft="5dp">
 
-            <!--<com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"-->
-                <!--android:id="@+id/userProfile"-->
-                <!--android:layout_width="40dp"-->
-                <!--android:layout_height="40dp"-->
-                <!--android:src="@drawable/person"-->
-                <!--android:elevation="1dp"-->
-                <!--app:riv_corner_radius="20dip"-->
-                <!--app:riv_mutate_background="true" />-->
-            <ImageView
+            <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/userProfile"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                 />
+                android:background="@android:color/black"
+                android:elevation="1dp"
+                app:riv_corner_radius="20dip"
+                app:riv_mutate_background="true" />
+            <!--<ImageView-->
+                <!--android:id="@+id/userProfile"-->
+                <!--android:layout_width="40dp"-->
+                <!--android:layout_height="40dp"-->
+                <!--android:background="@drawable/circlular_picture" />-->
 
             <TextView android:id="@+id/messageId"
                 android:layout_width="wrap_content"
