--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -42,7 +42,7 @@
                 android:orientation="vertical"
                 android:layout_weight="8">
 
-                <TextView android:id="@+id/event_going_count"
+                <TextView android:id="@+id/location"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="#222222"
@@ -76,6 +76,7 @@
                 android:gravity="center"
                 android:text="access_time" />
             <TextView
+                android:id="@+id/date_time"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="8"
@@ -97,6 +98,7 @@
                 android:layout_weight="2" />
 
             <TextView
+                android:id="@+id/description"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="8"
