--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -72,8 +72,7 @@
         android:layout_marginStart="100dp"
         android:layout_marginBottom="50dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/EventsLocText"
-        android:onClick="eventDetails">
+        android:layout_alignStart="@+id/EventsLocText" >
 
         <TextView
             android:id="@+id/info_text0"
