--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -38,13 +38,13 @@
         android:textColor="#c4c4cc" />
 
     <TextView
-        android:text="Manipal"
+        android:text="Your Place"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/EventsText"
         android:layout_alignStart="@+id/EventsText"
         android:layout_marginTop="5dp"
-        android:id="@+id/EventsLocText"
+        android:id="@+id/person_city"
         android:textAlignment="viewStart"
         android:textSize="18sp"
         android:textColor="#fafafa" />
@@ -53,7 +53,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="100dp"
         android:layout_height="80dp"
-        android:id="@+id/personImage"
+        android:id="@+id/person_image"
         android:src="@drawable/person"
         app:riv_corner_radius_bottom_left="10dip"
         app:riv_mutate_background="true"
@@ -63,111 +63,19 @@
         android:cropToPadding="false"
         android:scaleType="centerCrop" />
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/card_view"
-        android:layout_gravity="center"
-        android:layout_width="150dp"
+    <HorizontalScrollView
+        android:layout_width="match_parent"
         android:layout_height="200dp"
-        app:cardCornerRadius="8dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginBottom="50dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/EventsLocText" >
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true" >
 
-        <TextView
-            android:id="@+id/info_text0"
+        <LinearLayout
+            android:id="@+id/card_holder"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="20dp"
-            android:text="57%"
-            android:textSize="20sp"
-            android:textColor="#000000" />
+            android:layout_height="match_parent"
+            android:orientation="horizontal" />
 
-        <TextView
-            android:id="@+id/info_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
-            android:layout_marginLeft="20dp"
-            android:text="Student"
-            android:textSize="16sp"
-            android:textColor="#000000" />
-
-        <TextView
-            android:id="@+id/info_text2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="80dp"
-            android:layout_marginLeft="20dp"
-            android:text="Summer Party"
-            android:textSize="14sp"
-            android:textColor="#000000" />
-
-        <TextView
-            android:id="@+id/info_text3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="105dp"
-            android:layout_marginLeft="20dp"
-            android:text="0.4 mi"
-            android:textSize="12sp"
-            android:textColor="#555555" />
-
-        <com.makeramen.roundedimageview.RoundedImageView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:id="@+id/people1"
-            android:src="@drawable/person"
-            app:riv_corner_radius="5dip"
-            app:riv_mutate_background="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="150dp"
-            android:layout_marginLeft="20dp"
-            android:adjustViewBounds="false"
-            android:cropToPadding="false"
-            android:scaleType="centerCrop" />
-
-        <com.makeramen.roundedimageview.RoundedImageView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:id="@+id/people2"
-            android:src="@drawable/person"
-            app:riv_corner_radius="5dip"
-            app:riv_mutate_background="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="150dp"
-            android:layout_marginLeft="55dp"
-            android:adjustViewBounds="false"
-            android:cropToPadding="false"
-            android:scaleType="centerCrop" />
+    </HorizontalScrollView>
 
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/card_view_inner"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            app:cardCornerRadius="5dp"
-            android:layout_marginTop="150dp"
-            android:layout_marginLeft="90dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignStart="@+id/EventsLocText"
-            app:cardBackgroundColor="@android:color/holo_green_light">
-
-
-            <TextView
-                android:id="@+id/people_count"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="+4"
-                android:textSize="12sp"
-                android:textColor="#fafafa"
-                android:gravity="center_vertical|center"/>
-        </android.support.v7.widget.CardView>
-
-    </android.support.v7.widget.CardView>
 </RelativeLayout>
