--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -53,7 +53,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="100dp"
         android:layout_height="80dp"
-        android:id="@+id/person_image"
+        android:id="@+id/profile_image"
         android:src="@drawable/person"
         app:riv_corner_radius_bottom_left="10dip"
         app:riv_mutate_background="true"
